[package]
name = "speedtest"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hyper = { version = "0.14", features = ['full'] }
tokio = { version = "1", features = ['full'] }
pretty_env_logger = "0.3"
log = "0.4"
anyhow = "1"
futures = "0.3"
clap = { version = "3.0.5", features = ['derive'] }


# [profile.release]
# debug = 1
